# OsmAnd-native

./: .gitignore
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  MapComponentQt5.cpp  Serializer.cpp
src/DesktopQt4/: main.cpp  main.qml
src/DesktopQt5/: Resource.qrc  main.cpp  main.qml
src/QML.MapView/: Button.qml  CheckBox.qml  InterfaceConfig.qml  Label.qml  MVButton.qml  MapView.qml  Page.qml  PageStack.js  PageStack.qml  ToolButton.qml  qmldir
src/blackberry10/: OsmAnd-native.pro  README.html  bar-descriptor.xml  main.cpp  main.qml
src/clientcore/: CMakeLists.txt  GestureRecognizer.cpp  MapComponent.cpp  Serializer.cpp
src/desktop/: main.cpp  main.qml
src/include/: GestureRecognizer.h  MapComponent.h  OsmAndConfig.h  Serializer.h
